--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -49,19 +49,7 @@
                     <a class="navbar-brand" runat="server" href="~/">Don Welch</a>
                 </div>
                 <div class="navbar-collapse collapse">
-                   <%-- <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin">SpecialEvents</a></li>
-                        <li><a runat="server" href="~/SamplePages/Listview">LV Reservations</a></li>
-                        <li><a runat="server" href="~/SamplePages/ReservationsByDate">Rpr Reservations</a></li>
-                        <li><a runat="server" href="~/SamplePages/CategoryMenuItems">Rpr CatMenuItems</a></li>
-                        <li><a runat="server" href="~/CommandPages/SpecialEventsAdmin">LV CRUD</a></li>
-                         <li><a runat="server" href="~/CommandPages/WaiterAdmin">Single Row CRUD</a></li>
-                        <li><a runat="server" href="~/Reports/MenuCategoryItemReport">Menu Category Items</a></li>
-                        <li><a runat="server" href="~/Reports/WaiterBillingReport">Waiter Billing</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
-                    </ul>--%>
+ 
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
@@ -78,11 +66,9 @@
                             </ul>
                         </LoggedInTemplate>
                     </asp:LoginView>
-<<<<<<< HEAD
+
                      <asp:Menu ID="navMenu" runat="server" 
-=======
-                   <asp:Menu ID="navMenu" runat="server" 
->>>>>>> origin/master
+
                     BackColor="#000000" BorderColor="Red"
                     StaticMenuItemStyle-ForeColor="#999999" 
                     StaticMenuItemStyle-VerticalPadding="10px"
@@ -105,21 +91,21 @@
                             <asp:MenuItem Text="Waiter 1517 CRUD" NavigateUrl="~/CommandPages/WaiterAdmin"></asp:MenuItem>
                          </asp:MenuItem>
                         
-<<<<<<< HEAD
+
                          <asp:MenuItem Text="About Us" NavigateUrl="~/About.aspx"></asp:MenuItem>
                          <asp:MenuItem Text="Contact Us" NavigateUrl="~/Contact.aspx"></asp:MenuItem>
                     </Items>
                 </asp:Menu>)
-=======
+
                          <asp:MenuItem Text="Reports" Value="Reports">
                             <asp:MenuItem Text="MenuCategory Items" NavigateUrl="~/Reports/MenuCategoryItemReport"></asp:MenuItem>
-                           
+                           <asp:MenuItem Text="Waiter Billing" NavigateUrl="~/Reports/WaiterBillingReport"></asp:MenuItem>
                          </asp:MenuItem>
                          <asp:MenuItem Text="About Us" NavigateUrl="~/About.aspx"></asp:MenuItem>
                          <asp:MenuItem Text="Contact Us" NavigateUrl="~/Contact.aspx"></asp:MenuItem>
                     </Items>
                 </asp:Menu>
->>>>>>> origin/master
+
                 </div>
             </div>
         </div>
